Fixed alignment of Forgot your Password Page

--- a/app/assets/stylesheets/password.scss
+++ b/app/assets/stylesheets/password.scss
@@ -4,31 +4,32 @@
 
 
 .forgot-pass {
-    margin: 20px auto;
-    padding-bottom: 25px;
-    width: 343px; 
-    height: auto; 
-    -webkit-border-radius: 8px/7px; 
-    -moz-border-radius: 8px/7px; 
-    border-radius: 8px/7px; 
-    background-color: black; 
-    -webkit-box-shadow: 1px 2px 5px rgba(0,0,0,.31); 
-    -moz-box-shadow: 1px 2px 5px rgba(0,0,0,.31); 
-    box-shadow: 1px 2px 5px rgba(0,0,0,.31); 
-    border: solid 1px #cbc9c9;
-    color: white;
+  margin: 20px auto;
+  padding-bottom: 25px;
+  width: 343px; 
+  height: auto; 
+  -webkit-border-radius: 8px/7px; 
+  -moz-border-radius: 8px/7px; 
+  border-radius: 8px/7px; 
+  background-color: black; 
+  -webkit-box-shadow: 1px 2px 5px rgba(0,0,0,.31); 
+  -moz-box-shadow: 1px 2px 5px rgba(0,0,0,.31); 
+  box-shadow: 1px 2px 5px rgba(0,0,0,.31); 
+  border: solid 1px #cbc9c9;
+  color: white;
+  text-align: center;
 }
 .forgot-password-title {
-    font-size: 32px;
-    font-weight: 300;
-    color: white;
-    text-align: center;
-    padding-top: 10px;
-    margin-bottom: 10px;
+  font-size: 32px;
+  font-weight: 300;
+  color: white;
+  text-align: center;
+  padding-top: 10px;
+  margin-bottom: 10px;
 }
 .forgot-password-button {
-    position: relative;
-    left: 20%;
-    padding: 5px 60px 5px 60px;
-    font-size: 16px;
-  }
+  position: relative;
+  padding: 5px 60px 5px 60px;
+  font-size: 16px;
+  margin-bottom: 5%;
+}
